Mandatory scroll snapping doesn't work correctly in tables with position:sticky https://bugs.webkit.org/show_bug.cgi?id=227300 <rdar://problem/79971196>

Reviewed by Simon Fraser.

Source/WebCore:

Add a mode for mapLocalToContainer which ignores sticky offsets. This will be
used by more code in the future.

Test: css3/scroll-snap/scroll-snap-drag-scrollbar-thumb-with-sticky.html

* page/scrolling/ScrollSnapOffsetsInfo.cpp:
(WebCore::updateSnapOffsetsForScrollableArea): Pass the IgnoreStickyOffsets flag.
* rendering/RenderBox.cpp:
(WebCore::RenderBox::mapLocalToContainer const): When the IgnoreStickyOffsets flag is
passed, explicitly remove sticky offsets from the container offset.
* rendering/RenderObjectEnums.h: Add the IgnoreStickyOffests flag.

LayoutTests:

Add a test which exercises the original bug.

* css3/scroll-snap/scroll-snap-drag-scrollbar-thumb-with-sticky-expected.txt: Added.
* css3/scroll-snap/scroll-snap-drag-scrollbar-thumb-with-sticky.html: Added.
* platform/ios/TestExpectations: Skip this test on iOS, which doesn't support thumb dragging.


Canonical link: https://commits.webkit.org/242158@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283100 268f45cc-cd09-0410-ab3c-d52691b4dbfc